DB populator to work with multiprocessing

--- a/DBPopulator/config.json
+++ b/DBPopulator/config.json
@@ -1,8 +1,10 @@
-{
+{    
     "InternalDomains": ["rbc.com", "rbccm.com"],
-    "NumberOfWorkers":10,
+    "NumberOfRooms":10,
+    "NumberOfMessages": 5,
     "UsernameLength":15,
     "DomainLength":10,
     "RoomIDLength":40,
-    "LocalUserProbability": 50
+    "LocalUserProbability": 50,
+    "MaxUserCount": 10
 }
